# TypeToast-API

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: fcbea3af4f34_initial_migration.py
app/: database.py  main.py  models.py
app/controllers/: __init__.py  records.py
app/crud/: score.py
app/models/: score.py
app/routers/: __init__.py  score.py
app/schemas/: score.py
scripts/: entry  setup.sh
